--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@
 #                                                                                 #
 # NOTICES:                                                                        #
 #                                                                                 #
-# License: GPLv3                                                                  #
+# License: Apache 2.0 :http://www.apache.org/licenses/LICENSE-2.0                 #
 #                                                                                 #
 ###################################################################################
 [metadata]
