[UPDATE] Don't use tool/runtest.py

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
     executor: mesonui_builder
     steps:
       - checkout
-      - run: python3 tool/testrun.py
+      - run: pytest run_utests.py
+      - run: pytest run_uitests.py
 
 workflows:
   version: 2
